--- a/Mazad_Listing.html
+++ b/Mazad_Listing.html
@@ -260,7 +260,6 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6 col-lg-6 col-12">
-
                     <div class="slider-wrapper">
                         <ul class="slider-thumb">
                             <li class="thumb_image img-fluid"><img src="assets/images/main/shot-1.png" alt="" width="96"
@@ -294,13 +293,7 @@
                             </li>
                         </ul>
                     </div>
-
                 </div>
-
-
-
-                <!-- ///////////////////////////////////////////////////////////////////// -->
-
 
                 <style>
                     /* START MODULE STYLING */
@@ -429,13 +422,13 @@
         </div>
     </section>
     <!-- ============================== product detail End==============================-->
+    <!-- ============================== product user chet Start==============================-->
+
     <section class="gradient-custom">
         <div class="container-fluid">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 col-lg-6 col-xl-6 col-12">
                     <div class="divide_line"></div>
-
-                    <!-- /////////////////////////////////////// -->
                     <ul class="nav nav-pills mb-3 product_navs gap-3" id="pills-tab" role="tablist">
                         <li class="nav-item" role="presentation">
                             <button class="nav-link active px-0" id="pills-about-tab" data-bs-toggle="pill"
@@ -535,7 +528,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /////////////////////////////////////// -->
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6 col-12">
                     <div class="row">
@@ -587,10 +579,92 @@
             </div>
         </div>
     </section>
+    <!-- ============================== product user chet End==============================-->
 
-
-
-
+    <!-- ==============================Upcoming Auction Card Start ==============================-->
+    <section class="auction_cardtrack pt-5 similar_auction">
+        <div class="container">
+            <div class="justify-content-between align-items-center d-flex">
+                <div class="heading flex-column d-flex">
+                    <h4><span>Similar</span> Auctions</h4>
+                </div>
+                <div class="me-md-5 all_auction d-none d-lg-block">
+                    <a href="#">VIEW ALL</a>
+                </div>
+            </div>
+        </div>
+        <div class="container px-0 pb-5 m-auto">
+            <div class="auctionslide__cards d-flex overflow-hidden ">
+                <div class=" px-2 py-5">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip222.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card_title mb-4">Upcoming Auctions</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" px-2 py-5">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip333.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card-title mb-4">Upcoming Auctions</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" px-2 py-5">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip444.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card-title mb-4">Upcoming Auctions</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" px-2 py-5">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip111.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card-title mb-4">Upcoming Auctions</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="me-md-5 all_auction d-block d-lg-none text-center">
+                <a href="#">VIEW ALL</a>
+            </div>
+        </div>
+    </section>
     <!-- =============================Contact Us Start==============================-->
     <section class="contact_wrapper py-4 my-3">
         <div class="container">
