--- a/Mazad_Listing.html
+++ b/Mazad_Listing.html
@@ -34,6 +34,8 @@
                             <li><a class="dropdown-item" href="#">Profile</a></li>
                             <li><a class="dropdown-item" href="#">Settings</a></li>
                             <li><a class="dropdown-item" href="filtersearch.html">Filter Search</a></li>
+                            <li><a class="dropdown-item" href="Mazad_Listing.html">Mazad Listing</a></li>
+                            <li><a class="dropdown-item" href="page_other_auctions.html">Other Auctions</a></li>
                             <li><a class="dropdown-item" href="login.html">Login</a></li>
                             <li><a class="dropdown-item" href="signup.html">Signup</a></li>
                             <li class="d-inline-flex gap-3 ps-3 w-100"><label class="form-check-label"
@@ -381,8 +383,8 @@
                                                 <strong>Ahmad Kabbani</strong>
                                                 <small>ahmad.kabbani@gmail.com</small>
                                             </div>
-                                            <img src="assets/images/user/Clipuser.png" width="49"
-                                                style="margin-right: 1rem;">
+                                            <img src="assets/images/user/Clipuser.png" alt="user"
+                                                class="me-2 img-fluid">
                                         </div>
                                     </div>
                                 </div>
