--- a/filtersearch.html
+++ b/filtersearch.html
@@ -36,6 +36,7 @@
                             <li><a class="dropdown-item" href="filtersearch.html">Filter Search</a></li>
                             <li><a class="dropdown-item" href="Mazad_Listing.html">Mazad Listing</a></li>
                             <li><a class="dropdown-item" href="page_other_auctions.html">Other Auctions</a></li>
+                            <li><a class="dropdown-item" href="Chat.html">Chat</a></li>
                             <li><a class="dropdown-item" href="login.html">Login</a></li>
                             <li><a class="dropdown-item" href="signup.html">Signup</a></li>
                             <li class="d-inline-flex gap-3 ps-3 w-100"><label class="form-check-label"
