--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+    <!-- Custom RTL CSS -->
+    <link rel="stylesheet" href="assets/css/stylertl.css">
     <!-- Slick slider css  -->
     <link rel="stylesheet" href="assets/css/slick.css">
     <!-- Slick slider theme css  -->
@@ -28,14 +30,15 @@
                     <li class="list-unstyled nav-item dropdown custom_dropdown">
                         <a href="#" class="nav-link dropdown-toggle p-0" data-bs-toggle="dropdown"
                             id="navbarDropdownMenu" role="button"><i class="fa-regular fa-user me-1"></i>
-                            MY ACCOUNT
+                            حسابي
                         </a>
-                        <ul class="dropdown-menu drop_menu rounded-0 ms-10" aria-labelledby="navbarDropdownMenu">
+                        <ul class="dropdown-menu drop_menu rounded-0" aria-labelledby="navbarDropdownMenu">
                             <li><a class="dropdown-item" href="#">Profile</a></li>
                             <li><a class="dropdown-item" href="#">Settings</a></li>
                             <li><a class="dropdown-item" href="filtersearch.html">Filter Search</a></li>
                             <li><a class="dropdown-item" href="Mazad_Listing.html">Mazad Listing</a></li>
                             <li><a class="dropdown-item" href="page_other_auctions.html">Other Auctions</a></li>
+                            <li><a class="dropdown-item" href="Chat.html">Chat</a></li>
                             <li><a class="dropdown-item" href="login.html">Login</a></li>
                             <li><a class="dropdown-item" href="signup.html">Signup</a></li>
                             <li class="d-inline-flex gap-3 ps-3 w-100"><label class="form-check-label"
@@ -51,24 +54,24 @@
                 </ul>
                 <ul class="navbar-nav logout ms-3">
                     <li class="nav-item">
-                        <a class="nav-link pt-0" href="#">LOG OUT</a>
+                        <a class="nav-link pt-0" href="#">تسجيل خروج</a>
                     </li>
                 </ul>
-                <div class="align-items-center ms-auto">
+                <div class="align-items-center navsbtns">
                     <ul class="navbar-nav d-flex align-items-center gap-lg-4">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link" href="#">عن</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">INBOX</a>
+                            <a class="nav-link" href="#">صندوق الوارد</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">SERVICES</a>
+                            <a class="nav-link" href="#">خدمات</a>
                         </li>
                         <li class="nav-item dropdown custom_dropdown">
                             <a class="nav-link dropdown-toggle btn" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                LANGUAGE
+                                لغة
                             </a>
                             <ul class="dropdown-menu drop_menu2 rounded-0 border-0 m-0">
                                 <li><a class="dropdown-item justify-content-center d-flex" href="#">
