--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <ul class="navbar-nav d-flex align-items-center">
                     <li class="list-unstyled nav-item dropdown custom_dropdown">
                         <a href="#" class="nav-link dropdown-toggle p-0" data-bs-toggle="dropdown"
-                            id="navbarDropdownMenu" role="button"><i class="fa-regular fa-user me-1"></i>
+                            id="navbarDropdownMenu" role="button"><i class="fa-regular fa-user"></i>
                             حسابي
                         </a>
                         <ul class="dropdown-menu drop_menu rounded-0" aria-labelledby="navbarDropdownMenu">
@@ -52,7 +52,7 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="navbar-nav logout ms-3">
+                <ul class="navbar-nav logout">
                     <li class="nav-item">
                         <a class="nav-link pt-0" href="#">تسجيل خروج</a>
                     </li>
@@ -242,7 +242,7 @@
                         <div class="navbar-nav add_post justify-content-between align-items-center d-flex">
                             <div class="nav-item">
                                 <a class="nav-link p-0  d-flex align-items-center" href="addpost.html"><i
-                                        class="fa-solid fa-circle-plus me-1"></i>
+                                        class="fa-solid fa-circle-plus"></i>
                                     <span style="line-height: 17px;">ADD <br>
                                         POST</span></a>
                             </div>
@@ -329,7 +329,7 @@
                             <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
                             <div class="d-flex align-items-center">
                                 <a href="#" class="card_bidbtn">BID</a>
-                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class="info_btn"></a>
                             </div>
                         </div>
                     </div>
@@ -348,7 +348,7 @@
                             <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
                             <div class="d-flex align-items-center">
                                 <a href="#" class="card_bidbtn">BID</a>
-                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class="info_btn"></a>
                             </div>
                         </div>
                     </div>
@@ -367,7 +367,7 @@
                             <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
                             <div class="d-flex align-items-center">
                                 <a href="#" class="card_bidbtn">BID</a>
-                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class="info_btn"></a>
                             </div>
                         </div>
                     </div>
@@ -386,7 +386,7 @@
                             <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
                             <div class="d-flex align-items-center">
                                 <a href="#" class="card_bidbtn">BID</a>
-                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class="info_btn"></a>
                             </div>
                         </div>
                     </div>
@@ -423,7 +423,7 @@
                             <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
                             <div class="d-flex align-items-center">
                                 <a href="#" class="card_bidbtn">BID</a>
-                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class="info_btn"></a>
                             </div>
                         </div>
                     </div>
@@ -439,7 +439,7 @@
                             <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
                             <div class="d-flex align-items-center">
                                 <a href="#" class="card_bidbtn">BID</a>
-                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class="info_btn"></a>
                             </div>
                         </div>
                     </div>
@@ -455,7 +455,7 @@
                             <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
                             <div class="d-flex align-items-center">
                                 <a href="#" class="card_bidbtn">BID</a>
-                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class="info_btn"></a>
                             </div>
                         </div>
                     </div>
@@ -471,7 +471,7 @@
                             <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
                             <div class="d-flex align-items-center">
                                 <a href="#" class="card_bidbtn">BID</a>
-                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class="info_btn"></a>
                             </div>
                         </div>
                     </div>
@@ -703,11 +703,11 @@
                     <div class="custom_control">
                         <div class="custom_checks p-1 rounded mb-3 d-inline-flex w-100">
                             <input type="checkbox" class="form-check-input shadow-none" id="flexCheckMen">
-                            <label class="form-check-label ps-2 w-100" for="flexCheckMen">Men</label>
+                            <label class="form-check-label w-100" for="flexCheckMen">Men</label>
                         </div>
                         <div class="custom_checks p-1 rounded d-inline-flex w-100">
                             <input type="checkbox" class="form-check-input shadow-none" id="customCheckWomen">
-                            <label class="form-check-label ps-2 w-100" for="customCheckWomen">Women</label>
+                            <label class="form-check-label w-100" for="customCheckWomen">Women</label>
                         </div>
                     </div>
                 </div>
@@ -715,26 +715,26 @@
                     <div class="custom_control">
                         <div class="custom_checks p-1 rounded  mb-3 d-inline-flex w-100">
                             <input type="checkbox" class="form-check-input shadow-none" id="customCheckBags">
-                            <label class="form-check-label ps-2 w-100" for="customCheckBags">Bags</label>
+                            <label class="form-check-label w-100" for="customCheckBags">Bags</label>
                         </div>
                         <div class="custom_checks p-1 rounded  mb-3 d-inline-flex w-100">
                             <input type="checkbox" class="form-check-input shadow-none" id="customCheckPens">
-                            <label class="form-check-label ps-2 w-100" for="customCheckPens">Pens</label>
+                            <label class="form-check-label w-100" for="customCheckPens">Pens</label>
                         </div>
                         <div class="custom_checks p-1 rounded  mb-3 d-inline-flex w-100">
                             <input type="checkbox" class="form-check-input shadow-none" id="customCheckWatches">
-                            <label class="form-check-label ps-2 w-100" for="customCheckWatches">Watches</label>
+                            <label class="form-check-label w-100" for="customCheckWatches">Watches</label>
                         </div>
                         <div class="custom_checks p-1 rounded d-inline-flex w-100">
                             <input type="checkbox" class="form-check-input shadow-none" id="customCheckAccessories">
-                            <label class="form-check-label ps-2 w-100" for="customCheckAccessories">Accessories</label>
+                            <label class="form-check-label w-100" for="customCheckAccessories">Accessories</label>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8 col-12">
                     <div class="row">
                         <div class="col-10 mx-auto">
-                            <div class="slideimgs">
+                            <div class="slideimgs slidertlimgs">
                                 <div class="slide_item">
                                     <img src="assets/images/main/mb_logo.png" class="img-fluid m-auto" alt="montblance">
                                 </div>
