--- a/rtl/index.html
+++ b/rtl/index.html
@@ -10,9 +10,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
     <!-- Custom RTL CSS -->
-    <!-- <link rel="stylesheet" href="assets/css/stylertl.css"> -->
+    <link rel="stylesheet" href="assets/css/stylertl.css">
     <!-- Slick slider css  -->
     <link rel="stylesheet" href="assets/css/slick.css">
     <!-- Slick slider theme css  -->
