--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="list-unstyled nav-item dropdown custom_dropdown">
                         <a href="#" class="nav-link dropdown-toggle p-0" data-bs-toggle="dropdown"
                             id="navbarDropdownMenu" role="button"><i class="fa-regular fa-user"></i>
-                            حسابي
+                            MY ACCOUNT
                         </a>
                         <ul class="dropdown-menu drop_menu rounded-0" aria-labelledby="navbarDropdownMenu">
                             <li><a class="dropdown-item" href="#">Profile</a></li>
@@ -54,24 +54,24 @@
                 </ul>
                 <ul class="navbar-nav logout">
                     <li class="nav-item">
-                        <a class="nav-link pt-0" href="#">تسجيل خروج</a>
+                        <a class="nav-link pt-0" href="#"></a>LOG OUT</a>
                     </li>
                 </ul>
                 <div class="align-items-center navsbtns">
                     <ul class="navbar-nav d-flex align-items-center gap-lg-4">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">عن</a>
+                            <a class="nav-link" href="#">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">صندوق الوارد</a>
+                            <a class="nav-link" href="#">INBOX</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">خدمات</a>
+                            <a class="nav-link" href="#">SERVICES</a>
                         </li>
                         <li class="nav-item dropdown custom_dropdown">
                             <a class="nav-link dropdown-toggle btn" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                لغة
+                                LANGUAGE
                             </a>
                             <ul class="dropdown-menu drop_menu2 rounded-0 border-0 m-0">
                                 <li><a class="dropdown-item justify-content-center d-flex" href="#">
